# BB-PROTOCOL

./: .dockerignore  .gitignore  BB-PROTOCOL-DEPLOYMENT-GUIDE.md  BB-PROTOCOL-FEATURES.md  BB-PROTOCOL-RATING-REPORT.md  Caddyfile  DEPLOYMENT-GUIDE.md  Dockerfile  add-i18n-keys.mjs  docker-compose.dev.yml  docker-compose.yml  next.config.ts  package.json  playwright.config.ts  replace-i18n-strings.mjs  start-services.sh  temp-body.json  tsconfig.json  worklog-phase4.md  worklog-phase5-6.md  worklog-phase5.md  worklog.md
agent-ctx/: 0.3-0.5-dashboard-components.md  0.6-0.7-0.10-dashboard-components.md  0.8-dashboard-components.md  1-a-1-v2-i18n-agent.md  1-a-2-retry-contracts-i18n.md  1-a-3-i18n-dao-governance.md  1-a-i18n-migration-agent.md  1-b-3-i18n-engine-arch.md  1-b-frontend-refactor-agent.md  1-c-1-i18n-web3-wallet.md  1-c-i18n-migration-agent.md  1-fix-api-endpoints.md  1A-backend-api.md  1C-resonance-sim.md  2+3-fix-agent.md  2-A-fullstack-developer.md  2-D-compliance-interface.md  2-a-stripe-api-routes.md  2-hydration-fix-agent.md  2-provider-fix-agent.md  2B-contract-simulation.md  3+4-fullstack-developer.md  3-A-fullstack-developer.md  3-B-Full-Stack-Developer-Deployment-Center.md  3-C-monitoring-center.md  3-D-Feature-Flags.md  3-a-dashboard-store-upgrade.md  3-b-engine-status-hooks.md  3-i18n-web3-integration.md  4-C-fullstack-dao-governance.md  4-D-ecosystem-integration.md  4a-backend-developer.md  5-A-fullstack-contracts-arch.md  (+12 more)
rust-engine/: Cargo.toml
rust-engine/src/: ece_oracle.rs  ifd_calculator.rs  main.rs  mcp_router.rs  poue_prover.rs  types.rs
(+234 files in other folders)
