[package]
name = "bb-engine"
version = "0.1.0"
edition = "2021"
description = "BB AI Avatar DeFi Off-Chain Engine - Rust Reference Implementation"
authors = ["BB Protocol Team"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
alloy = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.21"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
petgraph = "0.6"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
rand = "0.8"
hex = "0.4"

[[bin]]
name = "bb-engine"
path = "src/main.rs"
